feat: Agregar dependencia de @astrojs/sitemap y actualizar pnpm-lock.yaml

--- a/package.json
+++ b/package.json
@@ -9,18 +9,17 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.2.1",
     "astro": "^5.1.8"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^5.1.5",
     "tailwindcss": "^3.4.17"
   },
-  "pnpm":{
+  "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild",
       "sharp"
     ]
-
   }
-  
 }
