--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "check": "astro check"
   },
   "dependencies": {
-    "@astrojs/sitemap": "^3.2.1",
-    "astro": "^5.1.8"
+    "@astrojs/sitemap": "^3.4.2",
+    "astro": "^5.12.4"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^5.1.5",
+    "@astrojs/tailwind": "^6.0.2",
     "tailwindcss": "^3.4.17"
   },
   "pnpm": {
